tests/examples/good/good2.mc
int main() {
    int arr[50];
    arr[2 * 5 + 3] = 42;   // simula arr[2][3]
    print_int(arr[2 * 5 + 3]);
    return 0;
}
