tests/examples/bad/bad2.mc
int main() {

    x = 3;   // ERROR: x no esta declarada

    return 0;
}
